--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^4.0",
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "^0.9.9",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"
