--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: php
 php:
   - '7.1'
+
+sudo: false
+
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+script: vendor/bin/phpunit
