Figure out how to use S3 client.

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,10 @@ PUSHER_SECRET=
 # Amazon Web Services credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+AWS_REGION='us-east-1'
+FLOWERBUG_SIMPLEDB_PROJECTS_DOMAIN=awesome_domain
+FLOWERBUG_SIMPLEDB_IPN_MESSAGES_DOMAIN=cool_ipn_place
+FLOWERBUG_SIMPLEDB_TEST_DOMAIN=a_domain_that_exists
+FLOWERBUG_S3_TEST_PREFIX=a_prefix_that_has_files_in_it
+FLOWERBUG_S3_PROJECTS_BUCKET=the_bucket_where_projects_are_stored
