--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.0.0",
         "aws/aws-sdk-php": "2.*",
         "doctrine/cache": "^1.6",
-        "laravel/framework": "5.4.*"
+        "laravel/framework": "5.5.*",
+        "fideloper/proxy": "~3.3",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^4.0",
-        "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "~5.0",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "~6.0",
+        "filp/whoops": "~2.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"
     },
