--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,20 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.3",
         "aws/aws-sdk-php": "2.*",
         "doctrine/cache": "^1.6",
-        "laravel/framework": "5.5.*",
-        "fideloper/proxy": "~3.3",
+        "laravel/framework": "5.6.*",
+        "fideloper/proxy": "~4.0",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "laravel/homestead": "^4.0",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "~6.0",
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~7.0",
         "filp/whoops": "~2.0",
+        "nunomaduro/collision": "~1.1",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"
     },
@@ -42,16 +43,17 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ]
     },
     "config": {
         "preferred-install": "dist",
-        "sort-packages": true
-    }
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
